<resources>
    <string name="app_name">Kayaking Playspots</string>
    <string name="menu_add">Add</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_remove_filter">Show all</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="playspot">Playspot</string>
    <string name="river">River</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="lowlevel">Low level</string>
    <string name="ideallevel">Ideal level</string>
    <string name="highlevel">High level</string>
    <string name="gaugesite">Gauge Site</string>
    <string name="edit_record">Edit record</string>
    <string name="update">Update record</string>
    <string name="delete">Delete record</string>
    <string name="save">Save changes</string>
    <string name="liked">Liked?</string>
    <string name="refresh">Refresh record list</string>
    <string name="view_records">View records</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
