<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.psu.jjb24.kayak.AddActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/btnSave"
            android:src="@drawable/ic_save"
            android:contentDescription="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="btnAddClick"/>
        <ImageButton
            android:id="@+id/btnDelete"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/btnSave"
            android:layout_toStartOf="@id/btnSave"
            android:onClick="btnDeleteClick"/>
        <TextView
            android:id="@+id/lblPlayspot"
            android:text="@string/playspot"
            android:layout_below="@id/btnSave"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txtPlayspot"
            android:layout_width="0dp"
            android:layout_below="@id/btnSave"
            android:layout_toRightOf="@+id/lblGaugeSite"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>
        <TextView
            android:id="@+id/lblRiver"
            android:text="@string/river"
            android:layout_below="@id/txtPlayspot"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txtRiver"
            android:layout_width="0dp"
            android:layout_below="@id/txtPlayspot"
            android:layout_toEndOf="@id/lblGaugeSite"
            android:layout_toRightOf="@id/lblGaugeSite"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>
        <TextView
            android:id="@+id/lblLatitude"
            android:text="@string/latitude"
            android:layout_below="@id/txtRiver"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txtLatitude"
            android:layout_width="0dp"
            android:layout_below="@id/txtRiver"
            android:layout_toEndOf="@id/lblGaugeSite"
            android:layout_toRightOf="@id/lblGaugeSite"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"/>
        <TextView
            android:id="@+id/lblLongitude"
            android:text="@string/longitude"
            android:layout_below="@id/txtLatitude"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txtLongitude"
            android:layout_width="0dp"
            android:layout_below="@id/txtLatitude"
            android:layout_toEndOf="@id/lblGaugeSite"
            android:layout_toRightOf="@id/lblGaugeSite"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"/>
        <TextView
            android:id="@+id/lblLowLevel"
            android:text="@string/lowlevel"
            android:layout_below="@id/txtLongitude"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txtLowLevel"
            android:layout_width="0dp"
            android:layout_below="@id/txtLongitude"
            android:layout_toEndOf="@id/lblGaugeSite"
            android:layout_toRightOf="@id/lblGaugeSite"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        <TextView
            android:id="@+id/lblIdealLevel"
            android:text="@string/ideallevel"
            android:layout_below="@id/txtLowLevel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txtIdealLevel"
            android:layout_width="0dp"
            android:layout_below="@id/txtLowLevel"
            android:layout_toEndOf="@id/lblGaugeSite"
            android:layout_toRightOf="@id/lblGaugeSite"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        <TextView
            android:id="@+id/lblHighLevel"
            android:text="@string/highlevel"
            android:layout_below="@id/txtIdealLevel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txtHighLevel"
            android:layout_width="0dp"
            android:layout_below="@id/txtIdealLevel"
            android:layout_toEndOf="@id/lblGaugeSite"
            android:layout_toRightOf="@id/lblGaugeSite"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        <TextView
            android:id="@id/lblGaugeSite"
            android:text="@string/gaugesite"
            android:layout_below="@id/txtHighLevel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txtGaugeSite"
            android:layout_width="0dp"
            android:layout_below="@id/txtHighLevel"
            android:layout_toEndOf="@id/lblGaugeSite"
            android:layout_toRightOf="@id/lblGaugeSite"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </RelativeLayout>
</ScrollView>